<resources>
    <string name="app_name">GitHub Viewer</string>
    <string name="logout">Log out</string>
    <string name="create_repo">Create repository</string>
    <string name="log_in">Log in</string>
    <string name="home">Home</string>
    <string name="repositories">Repositories</string>
    <string name="enter_repository_name">Enter query</string>
    <string name="search">Search</string>
    <string name="my_repositories">My repositories</string>
    <string name="load_more">Load more</string>
    <string name="is_private_repo">private</string>
    <string name="current_branch">branch: %1$s</string>
    <string name="clear">Clear</string>
    <string name="home_page">Home</string>
    <string name="search_title">Search</string>
    <string name="commit_comment_event">%1$s commented on commit in repository %2$s</string>
    <string name="create_event">%1$s created %2$s in repository %3$s</string>
    <string name="delete_event">%1$s deleted %2$s in repository %3$s</string>
    <string name="fork_event">%1$s forked repository %2$s</string>
    <string name="gollum_event">%1$s created or updated wiki in repository %2$s</string>
    <string name="issue_comment_event">%1$s %2$s issue comment in repository %3$s</string>
    <string name="issues_event">%1$s %2$s issue in repository %3$s</string>
    <string name="member_event">%1$s %2$s member in repository %3$s</string>
    <string name="public_event">%1$s made repository %2$s public</string>
    <string name="pull_request_event">%1$s %2$s pull request in repository %3$s</string>
    <string name="pull_request_review_event">%1$s %2$s pull request review in repository %3$s</string>
    <string name="pull_request_review_comment_event">%1$s %2$s pull request review comment in repository %3$s</string>
    <string name="push_event">%1$s pushed to repository %2$s</string>
    <string name="release_event">%1$s %2$s release in repository %3$s</string>
    <string name="sponsorship_event">%1$s %2$s sponsorship in repository %3$s</string>
    <string name="watch_event">%1$s watches repository %2$s</string>
    <string name="create_repository_title">Create repository</string>
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="home_url">home url</string>
    <string name="create">Create</string>
    <string name="reload">Reload</string>
</resources>