<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.SearchFragment">

    <data>
        <variable
            name="viewModel"
            type="com.github.petkovicdanilo.ghviewer.viewmodel.SearchResultsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/fragment_root_padding"
            android:layout_marginEnd="@dimen/margin_end">

            <TextView
                android:id="@+id/search_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/search_title"
                android:textSize="@dimen/title_text_size"
                android:layout_marginBottom="@dimen/title_bottom_margin"/>

            <EditText
                android:id="@+id/txt_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_repository_name"
                android:maxLines="1"
                android:text="@={viewModel.query}"
                app:layout_constraintBaseline_toBaselineOf="@+id/btn_search"
                app:layout_constraintEnd_toStartOf="@+id/btn_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/btn_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.search()}"
                android:text="@string/search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title"
                android:layout_marginEnd="5dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/repository_item"
                android:padding="@dimen/list_padding"
                app:layout_constraintTop_toBottomOf="@id/txt_search" />

            <Button
                android:id="@+id/btn_search_load_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{!viewModel.done &amp;&amp; viewModel.searchResults.size() > 0}"
                android:onClick="@{() -> viewModel.loadNextPage()}"
                android:text="@string/load_more"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_results" />

            <Button
                android:id="@+id/btn_search_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.searchResults.size() > 0}"
                android:onClick="@{() -> viewModel.clear()}"
                android:text="@string/clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/search_results" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>