<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.fragment.RepositoriesFragment">

    <data>
        <variable
            name="viewModel"
            type="com.github.petkovicdanilo.ghviewer.viewmodel.RepositoriesViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_end"
            android:padding="@dimen/fragment_root_padding">

            <TextView
                android:id="@+id/txt_my_repositories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/title_bottom_margin"
                android:text="@string/my_repositories"
                android:textSize="@dimen/title_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/my_repositories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/list_background"
                android:padding="@dimen/list_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_my_repositories"
                tools:listitem="@layout/repository_item" />

            <Button
                android:id="@+id/btn_my_repositories_load_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:enabled="@{!viewModel.done}"
                android:onClick="@{() -> viewModel.loadNextPage()}"
                android:text="@string/load_more"
                app:layout_constraintEnd_toStartOf="@id/guideline3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/my_repositories" />

            <Button
                android:id="@+id/btn_my_repositories_reload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="@{() -> viewModel.reload()}"
                android:text="@string/reload"
                app:layout_constraintStart_toEndOf="@id/guideline3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/my_repositories" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>